photos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ente
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: museum
          image: ghcr.io/ente-io/server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: ente-museum-config
              mountPath: /museum.yaml
              subPath: museum.yaml
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: "2"
              memory: 2Gi
      volumes:
        - name: ente-museum-config
          configMap:
            name: ente-museum-config
